[package]
name = "spectrak"
version = "0.1.0"
authors = ["bpostlethwaite <post.ben.here@gmail.com>"]
edition = "2018"

[dependencies]
jack = "0.7.1"
ringbuf = "0.2.6"
rustfft = "6.0.1"
realfft = "2.0.1"
num-complex = "0.4.0"
crossbeam-channel = "0.5.1"
glium = "*"
cgmath = "*"
anyhow = "1.0.40"
egui = { git = "https://github.com/emilk/egui", branch = "master" }
egui_glium = { git = "https://github.com/emilk/egui", branch = "master" }
image = "0.23.14"
epi = { git = "https://github.com/emilk/egui", branch = "master" }

[features]
default = []

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]